Version 0.12 (unreleased)
* Add openjtalk module.
* Add socket activation.
* Add language and variant parameters to "list voice" command.
* libspeechd: Simplify buffer management.
* Fix use of semaphores on MacOS.
* Fix splitting long UTF-8 sequences.
* Update CLDR to version 44 and symbols from NVDA.
* Add spd_fd function to C api.
* Detect module failures from generic module.

Version 0.11.5
* Update CLDR to version 43 and symbols from NVDA.
* Fix parsing and emitting space character.
* Reduce espeak buffer size to avoid ssml issues.
* Add --disable-doc.
* Fix spd-conf not being able to set the default module.
* Fix pausing without index.
* ibmtts: Fix parameter reset.
* ibmtts: Disable using the module punctuation by default.

Version 0.11.4
* Update CLDR to version 42 and symbols from NVDA.
* Fix audio plugin loading with dlopen.
* Fix atomicity of getting reply in threaded mode.

Version 0.11.3
* Fix back DefaultModule configuration.
* pico: Avoid falling to english when passed a bogus voice name.
* espeak: Fix setting voice type.

Version 0.11.2
* Fix loading xx-yy locales.
* Various memory leaks fixes.
* Add mimic3 configuration file.
* pico: Fix setting language vs voice.
* Make sure that modules report a list of voices.
* Update CLDR to version 41, symbols from NVDA and orca.
* Allow building without ltdl.
* Re-enable SSML in espeak-ng-mbrola module.

Version 0.11.1
* Add SPEECHD_PLUGIN_DIR environment variable.
* Fix listing voices of the default module.

Version 0.11
* Support playing audio through the server.
* Simplify modules thanks to this.
* modules: Add support for loading from user's .local/libexec/speech-dispatcher.
* symbols: Process symbols.dic before emojis.dic.
* symbols: Enable speechd symbols processing by default.
* modules: Moved speech dispatcher modules to /usr/libexec/speech-dispatcher-modules
  (but keep compatibility with old /usr/lib/speech-dispatcher-modules path).
* espeak-ng: Add support for mbrola voices.